--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@jupiterone/jupiter-integration-onelogin",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "A JupiterOne managed integration for https://www.onelogin.com",
   "main": "index.js",
   "repository": "https://github.com/jupiterone-io/jupiter-integration-onelogin",
@@ -14,8 +14,11 @@
     "build:src": "babel src --extensions '.ts' --out-dir dist",
     "build:files": "ts-node tools/copy-dist-files.ts",
     "build:types": "tsc --project tsconfig.dist.json --declaration --emitDeclarationOnly",
-    "lint": "tslint --project . --fix",
-    "pretest": "yarn lint",
+    "build:publish": "yarn build && cd dist && yarn publish --access public",
+    "lint": "yarn lint:ts && yarn lint:md",
+    "lint:md": "remark .",
+    "lint:ts": "tslint --project .",
+    "format": "yarn prettier --write '**/*.{ts,js,json,md}'",
     "test": "jest"
   },
   "dependencies": {
@@ -28,6 +31,8 @@
   "devDependencies": {
     "@babel/cli": "^7.2.3",
     "@babel/core": "^7.2.2",
+    "@babel/plugin-proposal-class-properties": "^7.3.4",
+    "@babel/plugin-proposal-object-rest-spread": "^7.3.4",
     "@babel/preset-env": "^7.3.1",
     "@babel/preset-typescript": "^7.1.0",
     "@jupiterone/jupiter-managed-integration-sdk": "^19.1.0",
@@ -39,6 +44,11 @@
     "jest": "^24.0.0",
     "lint-staged": "^8.1.3",
     "prettier": "1.16.4",
+    "remark-cli": "^6.0.1",
+    "remark-lint": "^6.0.4",
+    "remark-preset-lint-consistent": "^2.0.2",
+    "remark-preset-lint-markdown-style-guide": "^2.1.2",
+    "remark-preset-lint-recommended": "^3.0.2",
     "ts-jest": "^24.0.0",
     "ts-node": "^8.0.2",
     "tslint": "^5.12.1",
@@ -51,12 +61,17 @@
     }
   },
   "lint-staged": {
-    "*.ts": [
-      "tslint --project . --fix",
+    "*.md": [
+      "remark .",
       "prettier --write",
       "git add"
     ],
-    "*.{js,json,md}": [
+    "*.ts": [
+      "tslint --project .",
+      "prettier --write",
+      "git add"
+    ],
+    "*.{js,json}": [
       "prettier --write",
       "git add"
     ]
