--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "@jupiterone/jupiter-integration-onelogin",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "description": "A JupiterOne managed integration for https://www.onelogin.com",
   "main": "index.js",
   "repository": "https://github.com/jupiterone-io/jupiter-integration-onelogin",
   "license": "SEE LICENSE IN LICENSE",
   "scripts": {
-    "start": "ts-node tools/execute.ts | bunyan",
+    "start": "ts-node --require dotenv/config tools/execute.ts | bunyan",
     "start:graph": "docker run -d --rm --name jupiterone-local-graph -p 8182:8182 tinkerpop/gremlin-server:3.3",
     "stop:graph": "docker stop jupiterone-local-graph",
     "prebuild": "rm -rf dist/*",
@@ -26,7 +26,7 @@
     "node-fetch": "^2.3.0"
   },
   "peerDependencies": {
-    "@jupiterone/jupiter-managed-integration-sdk": "^19.1.0"
+    "@jupiterone/jupiter-managed-integration-sdk": "^20.0.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.2.3",
@@ -35,15 +35,18 @@
     "@babel/plugin-proposal-object-rest-spread": "^7.3.4",
     "@babel/preset-env": "^7.3.1",
     "@babel/preset-typescript": "^7.1.0",
-    "@jupiterone/jupiter-managed-integration-sdk": "^19.1.0",
+    "@jupiterone/jupiter-managed-integration-sdk": "^20.0.0",
     "@types/bunyan": "^1.8.5",
     "@types/fs-extra": "^5.0.5",
     "@types/jest": "^24.0.0",
     "@types/node": "^10.12.20",
     "@types/node-fetch": "^2.1.6",
+    "dotenv": "^7.0.0",
     "fs-extra": "^7.0.1",
     "husky": "^1.3.1",
     "jest": "^24.0.0",
+    "jest-haste-map": "^24.0.0",
+    "jest-resolve": "^24.1.0",
     "lint-staged": "^8.1.3",
     "prettier": "1.16.4",
     "remark-cli": "^6.0.1",
