--- a/docker-compose.sample.yml
+++ b/docker-compose.sample.yml
@@ -14,9 +14,9 @@ services:
     environment:
       NODE_ENV: development
       GRAPH_DB_ENDPOINT: graph
-      ONELOGIN_CLIENT_ID: 'YOUR ONELOGIN CLIENT ID HERE'
-      ONELOGIN_CLIENT_SECRET: 'YOUR ONELOGIN CLIENT SECRET HERE'
-      ONELOGIN_ACCOUNT_NAME: ''
+      ONELOGIN_LOCAL_EXECUTION_CLIENT_ID: 'YOUR ONELOGIN CLIENT ID HERE'
+      ONELOGIN_LOCAL_EXECUTION_CLIENT_SECRET: 'YOUR ONELOGIN CLIENT SECRET HERE'
+      ONELOGIN_LOCAL_EXECUTION_ACCOUNT_NAME: ''
     depends_on:
       - graph
   graph:
