--- a/package.json
+++ b/package.json
@@ -5,16 +5,22 @@
   "main": "index.js",
   "repository": "https://github.com/jupiterone-io/jupiter-integration-onelogin",
   "license": "SEE LICENSE IN LICENSE",
+  "files": [
+    "LICENSE",
+    "dist"
+  ],
+  "publishConfig": {
+    "access": "public"
+  },
   "scripts": {
     "start": "ts-node --require dotenv/config tools/execute.ts | bunyan",
     "start:graph": "docker run -d --rm --name jupiterone-local-graph -p 8182:8182 tinkerpop/gremlin-server:3.3",
     "stop:graph": "docker stop jupiterone-local-graph",
-    "prebuild": "rm -rf dist/*",
-    "build": "yarn build:types && yarn build:src && yarn build:files",
+    "prebuild": "yarn test",
+    "build": "rm -rf dist/* && yarn build:types && yarn build:src && yarn build:docs",
     "build:src": "babel src --extensions '.ts' --out-dir dist",
-    "build:files": "ts-node tools/copy-dist-files.ts",
+    "build:docs": "ts-node tools/docs.ts",
     "build:types": "tsc --project tsconfig.dist.json --declaration --emitDeclarationOnly",
-    "build:publish": "yarn build && cd dist && yarn publish --access public",
     "lint": "yarn lint:ts && yarn lint:md",
     "lint:md": "remark .",
     "lint:ts": "tslint --project .",
@@ -22,11 +28,10 @@
     "test": "jest"
   },
   "dependencies": {
-    "bunyan": "^1.8.12",
     "node-fetch": "^2.3.0"
   },
   "peerDependencies": {
-    "@jupiterone/jupiter-managed-integration-sdk": "^21.0.0"
+    "@jupiterone/jupiter-managed-integration-sdk": "^22.0.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.2.3",
@@ -35,12 +40,13 @@
     "@babel/plugin-proposal-object-rest-spread": "^7.3.4",
     "@babel/preset-env": "^7.3.1",
     "@babel/preset-typescript": "^7.1.0",
-    "@jupiterone/jupiter-managed-integration-sdk": "^20.0.0",
+    "@jupiterone/jupiter-managed-integration-sdk": "^22.0.1",
     "@types/bunyan": "^1.8.5",
     "@types/fs-extra": "^5.0.5",
     "@types/jest": "^24.0.0",
     "@types/node": "^10.12.20",
     "@types/node-fetch": "^2.1.6",
+    "bunyan": "^1.8.12",
     "dotenv": "^7.0.0",
     "fs-extra": "^7.0.1",
     "husky": "^1.3.1",
@@ -66,19 +72,22 @@
     }
   },
   "lint-staged": {
-    "*.md": [
-      "remark .",
-      "prettier --write",
-      "git add"
-    ],
-    "*.ts": [
-      "tslint --project .",
-      "prettier --write",
-      "git add"
-    ],
-    "*.{js,json}": [
-      "prettier --write",
-      "git add"
-    ]
+    "linters": {
+      "*.md": [
+        "remark .",
+        "prettier --write",
+        "git add"
+      ],
+      "*.ts": [
+        "tslint --project .",
+        "prettier --write",
+        "git add"
+      ],
+      "*.{js,json}": [
+        "prettier --write",
+        "git add"
+      ]
+    },
+    "ignore": []
   }
 }
