--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@jupiterone/jupiter-integration-onelogin",
   "version": "0.2.0",
   "description": "A JupiterOne managed integration for https://www.onelogin.com",
-  "main": "index.js",
+  "main": "dist/index.js",
   "repository": "https://github.com/jupiterone-io/jupiter-integration-onelogin",
   "license": "SEE LICENSE IN LICENSE",
   "files": [
