--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "license": "SEE LICENSE IN LICENSE",
   "files": [
     "LICENSE",
-    "dist"
+    "dist",
+    "docs"
   ],
   "publishConfig": {
     "access": "public"
