--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
   "license": "SEE LICENSE IN LICENSE",
   "files": [
     "LICENSE",
-    "dist",
-    "docs"
+    "dist"
   ],
   "publishConfig": {
     "access": "public"
