NO-TICKET - updated docs file names to new repo names and changed references to jupiter-integration- to graph-

--- a/docker-compose.sample.yml
+++ b/docker-compose.sample.yml
@@ -2,9 +2,9 @@ version: '3.7'
 
 services:
   integration:
-    image: jupiter-integration-onelogin-app
+    image: graph-onelogin-app
     build: .
-    container_name: jupiter-integration-onelogin-app
+    container_name: graph-onelogin-app
     volumes:
       - .:/app:cached
       - ~/.ssh:/root/.ssh
