AB-2940 - Upgrade to latest version of managed-integration-sdk

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "include": ["src/**/*", "tools/**/*", "test/**/*"],
   "compilerOptions": {
+    "skipLibCheck": true,
     "outDir": "build",
     "noUnusedLocals": true,
     "allowSyntheticDefaultImports": true,
